k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-blog
  labels:
    app: my-blog
spec:
  type: LoadBalancer
  selector:
    app: my-blog
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-blog
  template:
    metadata:
      labels:
        app: my-blog
    spec:
      containers:
        - name: my-blog
          image: 427243519225.dkr.ecr.ap-southeast-2.amazonaws.com/my_blog:latest
          volumeMounts:
            - name: my-blog-storage
              mountPath: /app
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: my-blog-storage
          persistentVolumeClaim:
            claimName: myclaim
