k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-blog-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: bryanblogs.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-blog
                port:
                  number: 3000
